--- a/POS_connective_patterns.ipynb
+++ b/POS_connective_patterns.ipynb
@@ -38,11 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#show_file(\"RACE/train/middle/5909.txt\")"
+    "#show_file(\"RACE/train/middle/3407.txt\")"
    ]
   },
   {
