--- a/generate_statements__explanation.ipynb
+++ b/generate_statements__explanation.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "from nltk import pos_tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,23 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "text, relations = extract_relations(\n",
-    "    \"parsed/race/train/high/18576.txt.tree\"\n",
+    "    \"parsed/race/train/middle/2549.txt.tree\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 117,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def rule_explanation_001(text, relation):\n",
@@ -58,20 +56,20 @@
     "    nucleus_relation, nucleus_segment = relation.get_first_nucleus()\n",
     "    satellite_relation, _ = relation.get_satellite()\n",
     "    search_in = [satellite_relation]\n",
-    "    if nucleus_relation is not None:\n",
-    "        if nucleus_relation.type != \"Background\":\n",
-    "            search_in.append(nucleus_relation)\n",
-    "        else:\n",
-    "            search_in.append(nucleus_relation.left_child)\n",
-    "            search_in.append(nucleus_relation.right_child)\n",
+    "#     if nucleus_relation is not None:\n",
+    "#         if nucleus_relation.type != \"Background\":\n",
+    "#             search_in.append(nucleus_relation)\n",
+    "#         else:\n",
+    "#             search_in.append(nucleus_relation.left_child)\n",
+    "#             search_in.append(nucleus_relation.right_child)\n",
     "    for relation in search_in:\n",
-    "        bg_rel = find_nested_relation(\n",
+    "        bg_rel, depth = find_nested_relation(\n",
     "            \"Background\", relation\n",
     "        )\n",
     "        if bg_rel is not None:\n",
     "            break\n",
     "    if bg_rel is None:\n",
-    "        return None\n",
+    "        return None, None\n",
     "    else:\n",
     "        _, bg_nucleus_segment = bg_rel.get_first_nucleus()\n",
     "        _, bg_satellite_segment = bg_rel.get_satellite()\n",
@@ -80,6 +78,9 @@
     "                text[bg_nucleus_segment.start:bg_nucleus_segment.end]\n",
     "            )\n",
     "        )\n",
+    "        bg_nucleus_text = clean(\n",
+    "                text[bg_nucleus_segment.start:bg_nucleus_segment.end]\n",
+    "            )\n",
     "        bg_satellite_text = clean(\n",
     "            text[bg_satellite_segment.start:bg_satellite_segment.end]\n",
     "        )\n",
@@ -90,32 +91,43 @@
     "        nucleus_text=clean(\n",
     "            text[nucleus_segment.start:nucleus_segment.end]\n",
     "        )\n",
-    "        print(\"{nucleus} because {bg_nucleus}\".format(\n",
-    "            nucleus=remove_trailing_punctuation(\n",
-    "                nucleus_text\n",
-    "            ),\n",
-    "            bg_nucleus=bg_nucleus_text\n",
-    "        ))"
+    "        statement = \"{nucleus} because {bg_nucleus}\".format(\n",
+    "            nucleus=remove_trailing_punctuation(nucleus_text),\n",
+    "            bg_nucleus=lowercase_first_letter(bg_nucleus_text)\n",
+    "        )\n",
+    "        if statement[-1] not in punctuation:\n",
+    "            statement += \".\"\n",
+    "        if len(sent_tokenize(statement)) == 1:\n",
+    "            return statement, depth\n",
+    "        else:\n",
+    "            return None, None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Efforts are being made to improve the capital's environment with tighter controls on emissions because year 224 clear days were rated\n",
-      "The government is co-operating with a USbased environmental protection agency to update existing buses and trucks with clean fuel technology because year 224 clear days were rated\n"
+      "They get up about 4:50 in the morning because they are working.\n",
+      "\n",
+      "None\n",
+      "\n",
+      "None\n",
+      "\n",
+      "None\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "if \"Explanation\" in relations:\n",
     "    for relation in relations[\"Explanation\"]:\n",
-    "        rule_explanation_001(text, relation)"
+    "        print(rule_explanation_001(text, relation))\n",
+    "        print(\"\")"
    ]
   },
   {
@@ -125,52 +137,25 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
    "source": [
-    "def generate_explanation_statement(text, relation):\n",
-    "    if relation.left.type == \"N\":\n",
-    "        assert(relation.right.type == \"S\")\n",
-    "        nucleus = text[relation.left.start:relation.left.end]\n",
-    "        satellite = text[relation.right.start:relation.right.end]\n",
-    "    else:\n",
-    "        assert(relation.left.type == \"S\")\n",
-    "        assert(relation.right.type == \"N\")\n",
-    "        nucleus = text[relation.left.start:relation.left.end]\n",
-    "        satellite = text[relation.right.start:relation.right.end]\n",
+    "# def generate_explanation_statement(text, relation):\n",
+    "#     if relation.left.type == \"N\":\n",
+    "#         assert(relation.right.type == \"S\")\n",
+    "#         nucleus = text[relation.left.start:relation.left.end]\n",
+    "#         satellite = text[relation.right.start:relation.right.end]\n",
+    "#     else:\n",
+    "#         assert(relation.left.type == \"S\")\n",
+    "#         assert(relation.right.type == \"N\")\n",
+    "#         nucleus = text[relation.left.start:relation.left.end]\n",
+    "#         satellite = text[relation.right.start:relation.right.end]\n",
     "    \n",
-    "    statement = (\n",
-    "f\"\"\"``{satellite}''\\nTHIS CAN EXPLAIN THE FOLLOWING FACT:\n",
-    "  (*) {nucleus}\n",
-    "\"\"\"\n",
-    "    )\n",
+    "#     statement = (\n",
+    "# f\"\"\"``{satellite}''\\nTHIS CAN EXPLAIN THE FOLLOWING FACT:\n",
+    "#   (*) {nucleus}\n",
+    "# \"\"\"\n",
+    "#     )\n",
     "    \n",
-    "    return clean_statement(statement)"
+    "#     return clean_statement(statement)"
    ]
   },
   {
@@ -179,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIRECTORY = \"parsed/race/train/high\"\n",
+    "DIRECTORY = \"parsed/race/train/middle\"\n",
     "\n",
     "def find_text():\n",
     "    for file_name in os.listdir(DIRECTORY):\n",
@@ -214,13 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 118,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "DIRECTORY = \"parsed/race/train/high\"\n",
+    "DIRECTORY = \"parsed/race/train/middle\"\n",
     "\n",
     "statements = []\n",
     "for file_name in os.listdir(DIRECTORY):\n",
@@ -229,11 +212,27 @@
     "    \n",
     "    if \"Explanation\" in relations:\n",
     "        for relation in relations[\"Explanation\"]:\n",
-    "            statement = generate_explanation_statement(\n",
+    "            statement, depth = rule_explanation_001(\n",
     "                text, \n",
     "                relation\n",
     "            )\n",
-    "            statements.append(f\"[{path}]\\n{statement}\")"
+    "            if statement is not None:\n",
+    "                statements.append(f\"[{path}, {depth}]\\n{statement}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\n",
+    "    \"statements/explanation/train/middle.txt\", \n",
+    "    \"wt\"\n",
+    ") as f:\n",
+    "    f.write(\"\\n\".join(statements))"
    ]
   },
   {
@@ -243,13 +242,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "with open(\n",
-    "    \"statements/explanation/train/high.txt\", \n",
-    "    \"wt\"\n",
-    ") as f:\n",
-    "    f.write(\"\\n\".join(statements))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
