--- a/race.ipynb
+++ b/race.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -55,56 +55,69 @@
      "output_type": "stream",
      "text": [
       "ARTICLE\n",
-      "When I was a kid, the Easter   holidays in Australia were my favorite time of the year. As soon as they began in April, my family would head straight to the beach for a weekend of camping.\n",
-      "Unlike most of the world, Easter falls in autumn in Australia. This means that Easter is our last chance to enjoy the warm weather, swim in the ocean and sleep in the bush under the stars.\n",
-      "We'd pitch our tents  on clear patches of grass and look out onto an almost empty beach. Often we were the only ones camping and the whole beach would be ours alone.\n",
-      "We used to spend all day outside - swimming, hiking and fishing. On Easter morning, my parents would wake up early and plan an Easter egg hunt for my three brothers and me. They would hide the eggs in the strangest places - in abandoned  bird nests in the trees, under our tents and in every corner of the stones that surround  the beach.\n",
-      "In Australia, instead of chocolate bunnies, we had chocolate bilbies  . Bilbies are Australian animals with long ears. Chocolate bilbies were the best treat to find and there was always one for each of us.\n",
-      "But sometimes, other animals found them first, and all we'd find were brightly colored wrappers  with animal tooth marks.\n",
-      "After the hunt we would come back to the campsite with our bellies   full of chocolate. For us, Easter wasn't about chocolate eggs or religious tradition. It was about being with our family in the great outdoors.\n",
+      "At midnight Mr. King coughed again. He got up and took some medicine. Before he lay down again, he smoked. And he couldn't go to sleep any longer. He found the medicine book and began to read it. He was afraid he had lung cancer. He seemed to see death was waiting for him. Tears  ran down his face. He didn't see his wife was standing by him.\n",
+      "\"What's wrong with you, dear?\" asked the woman.\n",
+      "\"Nothing,\" the old man answered and covered his face with his hands.\n",
+      "The old woman opened the book and understood at once. She said, \"You must stop smoking right now.\"\n",
+      "\"I began to smoke when I was nine, you know. How can't I do that?\"\n",
+      "\"But I think health is more important.\"\n",
+      "Mr. King coughed again and his wife said, \"Go to see a doctor tomorrow. He will be able to help you, I think.\"\n",
+      "The doctor told Mr. King to have an Xray examination of his lungs. And then he looked at the Xray carefully for a long time.\n",
+      "\"Tell me the truth, doctor.\"said Mr.King, \"Do you see any shadows in my lungs?\"\n",
+      "\"No, I don't see anything.\"\n",
+      "\"Yes?\" the old man said happily. \"Really?\"\n",
+      "\"Yes. Your lungs are turning black. How can I see any shadows?\"\n",
       "\n",
       "QUESTION  1\n",
-      "The writer loved Easter because   _  .\n",
-      "\t A) she enjoyed a great time out with her family\n",
-      "\t B) she could get up late during the holidays\n",
-      "\t C) she could eat eggs on that day\n",
-      "\t D) it was the most important holiday of the year\n",
-      "CORRECT ANSWER: A.\n",
+      "Mr.King got up to  _  .\n",
+      "\t A) smoke again\n",
+      "\t B) talk with his wife\n",
+      "\t C) read the medicine book\n",
+      "\t D) take some medicine\n",
+      "CORRECT ANSWER: D.\n",
       "\n",
       "QUESTION  2\n",
-      "Which of the following is TRUE of Easter in Australia?\n",
-      "\t A) It falls in spring.\n",
-      "\t B) Many animals come out that day.\n",
-      "\t C) It's different from that in other countries.\n",
-      "\t D) It's about the rebirth of Jesus.\n",
+      "Mr. King coughed because  _  .\n",
+      "\t A) he couldn't go to sleep\n",
+      "\t B) he was afraid to die\n",
+      "\t C) he smoked too much\n",
+      "\t D) he was too old\n",
       "CORRECT ANSWER: C.\n",
       "\n",
       "QUESTION  3\n",
-      "The writer usually had   _   during Easter holidays.\n",
-      "\t A) chocolate bunnies\n",
-      "\t B) chocolate eggs\n",
-      "\t C) chocolate bilbies\n",
-      "\t D) chocolate bars\n",
-      "CORRECT ANSWER: C.\n",
+      "_  , so tears ran down his face.\n",
+      "\t A) Mr. King thought he had lung cancer\n",
+      "\t B) Mr. King couldn't understand the book\n",
+      "\t C) Mr. King was too sad to go to sleep\n",
+      "\t D) The doctors refused to help Mr. King\n",
+      "CORRECT ANSWER: A.\n",
       "\n",
       "QUESTION  4\n",
-      "What does the passage mainly talk about?\n",
-      "\t A) Holidays in Australia.\n",
-      "\t B) Easter celebrations in Australia.\n",
-      "\t C) The history of Australian Easter.\n",
-      "\t D) Australian traditions.\n",
+      "The doctor told Mr. King to have an Xray examination because  _  .\n",
+      "\t A) he was sure the man would die soon\n",
+      "\t B) he wanted the man to stop smoking right now\n",
+      "\t C) he wanted to know if there was something wrong with his lungs\n",
+      "\t D) he was sure the man would soon be all right\n",
+      "CORRECT ANSWER: C.\n",
+      "\n",
+      "QUESTION  5\n",
+      "Which of the following is true?\n",
+      "\t A) There was nothing serious with Mr. King.\n",
+      "\t B) Smoking too much caused Mr. King's lungs to turn black.\n",
+      "\t C) The doctor found some shadows in Mr. King's lungs.\n",
+      "\t D) Mr. King decided to stop smoking at once.\n",
       "CORRECT ANSWER: B.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "show_file(\"RACE/train/middle/5909.txt\")"
+    "show_file(\"RACE/train/middle/624.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -119,29 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not bytes",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-f393941a8fa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfix_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"RACE/test/high/3645.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-20-af4013d91967>\u001b[0m in \u001b[0;36mfix_file\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wt\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ascii\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: write() argument must be str, not bytes"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fix_file(\"RACE/test/high/3645.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
