--- a/relation_extraction.ipynb
+++ b/relation_extraction.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Segment = namedtuple(\"Segment\", [\"type\", \"start\", \"end\"])\n",
@@ -278,22 +280,34 @@
     "    text = []\n",
     "    relations = {}\n",
     "    read_relation(tree_text, pointer, text, relations)\n",
-    "    return \"\".join(text), relations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return \"\".join(text), relations\n",
+    "\n",
+    "\n",
     "def extract_relations(file_path):\n",
     "    with open(file_path, \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    return read_relations(tree_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def read_relation_tree(tree_text):\n",
+    "    root, _ = read_relation(tree_text, 0, [], {})\n",
+    "    return root\n",
+    "\n",
+    "\n",
+    "def extract_relation_tree(file_path):\n",
+    "    with open(file_path, \"rt\") as f:\n",
+    "        tree_text = f.read()\n",
+    "\n",
+    "    return read_relation_tree(tree_text)"
    ]
   },
   {
