--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk import pos_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {
     "collapsed": true
@@ -16,27 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def find_nested_relation(relation_type, relation):\n",
-    "    if relation is None:\n",
-    "        return None\n",
+    "def find_nested_relation(\n",
+    "    relation_type, relation, cur_depth=1, max_depth=3\n",
+    "):\n",
+    "    if relation is None or cur_depth > max_depth:\n",
+    "        return None, None\n",
     "    elif relation_type == relation.type:\n",
-    "        return relation\n",
+    "        return relation, cur_depth\n",
     "    else:\n",
-    "        left_result = find_nested_relation(\n",
-    "            relation_type, relation.left_child\n",
+    "        left_result, depth = find_nested_relation(\n",
+    "            relation_type, relation.left_child, cur_depth + 1\n",
     "        )\n",
     "        if left_result is None:\n",
     "            return find_nested_relation(\n",
-    "                relation_type, relation.right_child\n",
+    "                relation_type, relation.right_child, cur_depth + 1\n",
     "            )\n",
     "        else:\n",
-    "            return left_result"
+    "            return left_result, depth"
    ]
   },
   {
@@ -128,22 +142,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def trim_connective(string):\n",
-    "    lower = string.lower()\n",
-    "    for c in connectives:\n",
-    "        if lower[:len(c)] == c:\n",
-    "            return string[len(c):].strip()\n",
-    "    return string"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {
     "collapsed": true
@@ -166,6 +164,61 @@
     "        return string\n",
     "    else:\n",
     "        return string[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def remove_leading_punctuation(string):\n",
+    "    if len(string) == 0 or string[0] not in punctuation:\n",
+    "        return string\n",
+    "    else:\n",
+    "        return string[1:].strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def lowercase_first_letter(string):\n",
+    "    return string[:1].lower() + string[1:]\n",
+    "\n",
+    "\n",
+    "def uppercase_first_letter(string):\n",
+    "    return string[:1].upper() + string[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def trim_connective(string):\n",
+    "    lower = string.lower()\n",
+    "    for c in connectives:\n",
+    "        if lower[:len(c)] == c:\n",
+    "            if (\n",
+    "                c != \"last\" \n",
+    "                or (len(lower) > len(c) and lower[len(c)] == \",\")\n",
+    "            ):\n",
+    "                return remove_leading_punctuation(\n",
+    "                    string[len(c):]\n",
+    "                )\n",
+    "            else:\n",
+    "                return string\n",
+    "    return string"
    ]
   }
  ],
