--- a/generate_statements__explanation-01.ipynb
+++ b/generate_statements__explanation-01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -14,29 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "%run ./utils.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "%run ./utils.ipynb\n",
+    "%run ./nlp.ipynb\n",
     "%run ./relation_extraction.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -49,13 +40,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rel = relations[\"Explanation\"][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def do_subjects_differ(text, rel, n_prev_sent=5):\n",
+    "    new_st, left_segment_sent_no = move_st(text, rel.left.start, n_prev_sent)\n",
+    "    if len({\".\", \"!\", \"?\"}.intersection(\n",
+    "        set(word_tokenize(text[rel.left.start:rel.right.end])))) > 0:\n",
+    "        right_segment_sent_no = left_segment_sent_no + 1\n",
+    "    else:\n",
+    "        right_segment_sent_no = left_segment_sent_no\n",
+    "\n",
+    "    if left_segment_sent_no == right_segment_sent_no:\n",
+    "        return True\n",
+    "    else:\n",
+    "        resolved_subjects = get_resolved_subjects(text[new_st:rel.right.end])\n",
+    "        if len(resolved_subjects) < right_segment_sent_no:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return (\n",
+    "                resolved_subjects[left_segment_sent_no] \n",
+    "                != resolved_subjects[right_segment_sent_no]\n",
+    "            )\n",
+    "\n",
+    "        \n",
+    "def test__do_subjects_differ():\n",
+    "    text = \"\"\"Nika lives in Berlin. She goes to a Kita. Her favourite color is yellow.\"\"\"\n",
+    "    assert do_subjects_differ(\n",
+    "        text, \n",
+    "        Relation(\"\", Segment(\"N\", 22, 42), Segment(\"S\", 42, len(text)), None, None)\n",
+    "    )\n",
+    "    text = \"\"\"Nika lives in Berlin. She goes to a Kita. She likes yellow things.\"\"\"\n",
+    "    assert not do_subjects_differ(\n",
+    "        text, \n",
+    "        Relation(\"\", Segment(\"N\", 22, 42), Segment(\"S\", 42, len(text)), None, None)\n",
+    "    )    \n",
+    "\n",
+    "    \n",
+    "test__do_subjects_differ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def search_segment(text, relation, direction):\n",
+    "    if direction == \"left\":\n",
+    "        child, segment = relation.left_child, relation.left\n",
+    "    else:\n",
+    "        child, segment = relation.right_child, relation.right\n",
+    "    if child:\n",
+    "        return search_segment(\n",
+    "            text, \n",
+    "            child, \n",
+    "            direction\n",
+    "        )\n",
+    "    else:\n",
+    "        return text[segment.start:segment.end]\n",
+    "    \n",
+    "    \n",
+    "def get_depth(relation):\n",
+    "    if relation:\n",
+    "        return 1 + max(\n",
+    "            get_depth(relation.left_child), \n",
+    "            get_depth(relation.right_child)\n",
+    "        )\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def rule_explanation_elaboration(text, relation):\n",
+    "def rule_explanation_01(text, relation):\n",
+    "    \n",
+    "    \n",
     "    assert(relation is not None and relation.type == \"Explanation\")\n",
     "    satellite_relation, _ = relation.get_satellite()\n",
     "    if satellite_relation and satellite_relation.type == \"Elaboration\":\n",
