--- a/utils.ipynb
+++ b/utils.ipynb
@@ -220,6 +220,39 @@
     "                return string\n",
     "    return string"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def search_segment(text, relation, direction):\n",
+    "    if direction == \"left\":\n",
+    "        child, segment = relation.left_child, relation.left\n",
+    "    else:\n",
+    "        child, segment = relation.right_child, relation.right\n",
+    "    if child:\n",
+    "        return search_segment(\n",
+    "            text, \n",
+    "            child, \n",
+    "            direction\n",
+    "        )\n",
+    "    else:\n",
+    "        return text[segment.start:segment.end]\n",
+    "    \n",
+    "    \n",
+    "def get_depth(relation):\n",
+    "    if relation:\n",
+    "        return 1 + max(\n",
+    "            get_depth(relation.left_child), \n",
+    "            get_depth(relation.right_child)\n",
+    "        )\n",
+    "    else:\n",
+    "        return 0"
+   ]
   }
  ],
  "metadata": {
